Fix Netlify: load Pro.js correctly and add _redirects for root

--- a/pro.html
+++ b/pro.html
@@ -8,63 +8,8 @@
     <link rel="stylesheet" href="Pro.css">
     <link rel="stylesheet" href="Proo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" src="js/Pro.js"></script>
-    <script>
-        $(document).ready(function () {
-            // Toggle mobile nav
-            $(".toggle i").click(function () {
-                $(".nav2 ul").slideToggle(300);
-            });
-
-            // Close menu on link click (mobile UX)
-            $(".nav2 ul li a").click(function () {
-                if ($(window).width() < 992) {
-                    $(".nav2 ul").slideUp(300);
-                }
-            });
-
-            // Smooth scroll for anchor links
-            $("a[href^='#']").click(function (e) {
-                e.preventDefault();
-                let target = $(this.hash);
-                if (target.length) {
-                    $("html, body").animate(
-                        { scrollTop: target.offset().top - 70 },
-                        700
-                    );
-                }
-            });
-
-            // Back to top button (optional)
-            $("body").append('<button id="backToTop">↑</button>');
-            $("#backToTop").css({
-                position: "fixed",
-                bottom: "30px",
-                right: "30px",
-                padding: "10px 15px",
-                border: "none",
-                "border-radius": "50%",
-                background: "lightseagreen",
-                color: "#fff",
-                "font-size": "20px",
-                cursor: "pointer",
-                display: "none",
-                "z-index": "999"
-            });
-
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > 200) {
-                    $("#backToTop").fadeIn();
-                } else {
-                    $("#backToTop").fadeOut();
-                }
-            });
-
-            $("#backToTop").click(function () {
-                $("html, body").animate({ scrollTop: 0 }, 600);
-            });
-        });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="Pro.js"></script>
     <title>Blog</title>
 </head>
 
