Comprehensive site improvements: - Add meta tags and optimize script loading - Enhance Netlify configuration with security headers - Add 404 page - Fix asset paths

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="all.css">
-    <link rel="stylesheet" href="Pro.css">
-    <link rel="stylesheet" href="Proo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="Pro.js"></script>
-    <title>Blog</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="El-Fayyado Blog - Web Development and Design">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="/all.css">
+    <link rel="stylesheet" href="/Pro.css">
+    <link rel="stylesheet" href="/Proo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        crossorigin="anonymous">
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+    <script src="/Pro.js" defer></script>
+
+    <title>El-Fayyado Blog</title>
 </head>
 
 <body>
