--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,12 +18,22 @@
             background: #f5f5f5;
             color: #333;
         }
+
         .container {
             text-align: center;
             padding: 2rem;
         }
-        h1 { font-size: 3rem; margin-bottom: 1rem; }
-        p { font-size: 1.2rem; margin-bottom: 2rem; }
+
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
         a {
             color: #fff;
             background: #007bff;
@@ -31,9 +42,13 @@
             border-radius: 5px;
             transition: background 0.3s;
         }
-        a:hover { background: #0056b3; }
+
+        a:hover {
+            background: #0056b3;
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>404 - Page Not Found</h1>
@@ -41,4 +56,5 @@
         <a href="/">Back to Home</a>
     </div>
 </body>
+
 </html>
